# bedtime-story-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agent/: __init__.py  agent.py  nodes.py  state.py
bedtime_story_agent/: llm.py  metrics.py  settings.py  tracing.py
docs/: graph.mmd
prompts/: __init__.py  scaffold.py  templates.py
scripts/: push_prompts.py  visualizer.py
tests/: conftest.py  test_eval.py
tests/eval/: __init__.py  prompts.py  report.py
