[project]
name = "bedtime-story-agent"
version = "0.1.0"
description = "Bedtime story agent — Hippocratic AI coding assignment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.52.0",
    "langgraph>=0.2.60",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bedtime_story_agent"]
